[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/secret-passage.png" type="Texture" id=1]
[ext_resource path="res://SecretPassageway.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="SecretPassageway" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_SecretPassageway_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_SecretPassageway_area_exited"]
